	  job-printer-uri attribute.
	- The scheduler only looked up printers and classes by
	  name in IPP requests, instead of using the full URI.
	  This caused problems with KUPS and friends with
	  remote printers.
	- The scheduler now handles better localization of
	  hostnames (e.g. server is host.foo.com, remote is
	  host.subfoo.foo.com, localized is not host.subfoo...)


CHANGES IN CUPS v1.1.2

	- Makefile/configure fixes
	- RPM spec file and EPM list file fixes
	- The cupsTempFile() function now uses a different
	  algorithm for generating temp files and "reserves"
	  them to avoid possible security exploitation.
	- Now use /dev/random (if available) to seed the random
	  number generator for certificates.
	- The /var/spool/cups and /var/spool/cups/tmp directories
	  were incorrectly owned by root; they are now owned by
	  the filter user, typically "lp".
	- The scheduler now resets the permissions on the spool
	  and temp directories as needed to match the filter
	  user.
	- Now expose ppdCollect() as an externally callable
	  function.
	- The image filters now support filtering from the
	  standard input.
	- The imagetoraster filter now collects all printer
	  options and job patch files and applies them to the
	  page header as needed.
	- Added format and banner options to LPD backend.
	- The send-document operation didn't start a job
	  immediately when last-document was true.
	- The set-job-attributes operation didn't correctly
	  replace the current job-hold-until value.
	- Removed the option wrapper code from ppdEmit() and
	  friends since it caused problems with Ghostscript
	  and many PS printers.
	- Was setting TZ environment variable twice for job
	  filters.
	- Added syslog logging in cups-lpd to aide in
	  debugging problems.
	- The HP-UX parallel port backend did not list the
	  available parallel ports on some systems (printf
	  calling problem...)
	- The lp and lpr commands overrode user options if
	  -d/-P were specified after -o.