@@ -1,5 +1,5 @@
 /*
- * "$Id: ipp-var.c,v 1.12 2000/07/17 12:31:53 mike Exp $"
+ * "$Id: ipp-var.c,v 1.13 2000/09/05 21:08:30 mike Exp $"
  *
  *   IPP variable routines for the Common UNIX Printing System (CUPS).
  *
@@ -206,7 +206,8 @@ ippSetCGIVars(ipp_t      *response,	/* I - Response data to be copied... */
 
         	  if (strcasecmp(hostname, server) == 0 &&
 	              (strcmp(getenv("REMOTE_HOST"), "127.0.0.1") == 0 ||
-		       strcmp(getenv("REMOTE_HOST"), "localhost") == 0))
+		       strcmp(getenv("REMOTE_HOST"), "localhost") == 0 ||
+		       strcmp(getenv("REMOTE_HOST"), server) == 0))
 		    strcpy(hostname, "localhost");
 
         	 /*
@@ -253,5 +254,5 @@ ippSetCGIVars(ipp_t      *response,	/* I - Response data to be copied... */
 
 
 /*
- * End of "$Id: ipp-var.c,v 1.12 2000/07/17 12:31:53 mike Exp $".
+ * End of "$Id: ipp-var.c,v 1.13 2000/09/05 21:08:30 mike Exp $".
  */
