@@ -1,5 +1,6 @@
 {#printer_name=0?No printers:
-<TABLE CELLPADDING="0" CELLSPACING="0" BORDER="0" WIDTH="100%">
+<P><B>Default Destination:</B> <A HREF="{default_uri}">{default_name}</A>
+<P><TABLE CELLPADDING="0" CELLSPACING="0" BORDER="0" WIDTH="100%">
 {[printer_name]
 <TR>
 	<TH BGCOLOR="#999966"><IMG SRC="/images/left.gif" ALT=""></TH>
